// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`KolSpanFc should allow markdown in label 1`] = `
<span class="kol-span">
  <span class="kol-span__container">
    <span class="kol-span__label md">
      <strong>
        Bold Label
      </strong>
    </span>
    <span aria-hidden="true" class="kol-span__label" hidden=""></span>
  </span>
</span>
`;

exports[`KolSpanFc should hide label when hideLabel is true 1`] = `
<span class="kol-span kol-span--hide-label">
  <span class="kol-span__container">
    <span aria-hidden="true" class="kol-span__label" hidden=""></span>
  </span>
</span>
`;

exports[`KolSpanFc should render with badge text 1`] = `
<span class="kol-span">
  <span class="kol-span__container">
    <span class="kol-span__label">
      Label with
      <u>
        Badge
      </u>
    </span>
    <span aria-hidden="true" class="kol-span__label" hidden=""></span>
    <kbd aria-hidden="true" class="badge-text-hint">
      Badge
    </kbd>
  </span>
</span>
`;

exports[`KolSpanFc should render with default props 1`] = `
<span class="kol-span">
  <span class="kol-span__container">
    <span class="kol-span__label">
      Default Label
    </span>
    <span aria-hidden="true" class="kol-span__label" hidden=""></span>
  </span>
</span>
`;

exports[`KolSpanFc should render with icons 1`] = `
<span class="kol-span">
  <i aria-hidden="true" class="icon kol-icon kol-icon__icon top top-icon" role="presentation"></i>
  <span class="kol-span__container">
    <i aria-hidden="true" class="icon kol-icon kol-icon__icon left left-icon" role="presentation"></i>
    <span class="kol-span__label">
      Label with Icons
    </span>
    <span aria-hidden="true" class="kol-span__label" hidden=""></span>
    <i aria-hidden="true" class="icon kol-icon kol-icon__icon right right-icon" role="presentation"></i>
  </span>
  <i aria-hidden="true" class="bottom bottom-icon icon kol-icon kol-icon__icon" role="presentation"></i>
</span>
`;
